--- a/frontend/pages/template-subir.html
+++ b/frontend/pages/template-subir.html
@@ -21,6 +21,7 @@
           <a href="/home"><img style="width: 2.5rem; height: 2.5rem" src="/assets/book-hub.png" alt="img" /></a>
         </div>
 
+        <!-- CATEGORIAS
         <div id="cat" style="display: flex; align-items: center; justify-content: center; gap: 0.5rem">
           <p>Categorías</p>
           <img style="width: 18px; height: 18px" src="/assets/icons/chevron-down.svg" alt="" />
@@ -34,7 +35,7 @@
               <a href="">Aventura</a>
             </div>
           </div>
-        </div>
+        </div> -->
         <form
           style="
             border: #616161 solid 1px;
